# PYSHIELD-SAST

./: LICENSE  README.md  pyproject.toml  pyshield_report.html  report.json  requirements-dev.txt  requirements.txt  setup.py
pyshield/: cli.py  reporter.py  scanner.py
pyshield/rules/: __init__.py  assert_check.py  base.py  command_injection.py  dangerous_eval.py  hardcoded_secrets.py  insecure_deserialization.py  insecure_ssl.py  path_traversal.py  sql_injection.py  ssrf.py  weak_cipher.py  weak_hash.py  xss_risk.py
sapyscan/: cli.py  config.py  reporter.py  scanner.py
sapyscan/rules/: __init__.py  base.py  command_injection.py  dangerous_eval.py  flask_debug.py  insecure_ssl.py  jwt_security.py  path_traversal.py  redos_risk.py  sql_injection.py  ssrf.py  weak_hash.py  weak_random.py  xxe_risk.py
tests/: test_scanner.py  test_taint_tracking.py  vulnerable_app.py
